# Agent_optimizer

./: .gitignore  .gitmodules  README.md  intro.md  pyproject.toml  record.rtf
configs/: action_space.yaml  build_packs.yaml  bwa_cases.yaml  candidate_policy.yaml  code_survey_guidance.yaml  direction_space.yaml  env.local.example.yaml  env.local.yaml  env.yaml  gates.yaml  hierarchical.yaml  lammps_cases.yaml  optimization_points.yaml  patch_families.yaml  planner.yaml  policy.yaml
docs/: architecture.md  opportunity_graph_architecture.md  orchestration_flow.md  sbindex_split_example.patch
examples/: run_one_case.sh
idea/: embedding_memory.md  system_memory_probe.md
orchestrator/: __init__.py  agent_llm.py  console.py  errors.py  graph.py  llm_client.py  main.py  memory.py  router.py  stop.py
prompts/: system.md
schemas/: __init__.py  action_ir.py  analysis_ir.py  candidate_ir.py  code_analysis_ir.py  code_survey_ir.py  decision_ir.py  experience_ir.py  experiment_ir.py  failure_ir.py  idea_ir.py  job_ir.py  opportunity_graph.py  optimizer_output_ir.py  patch_edit_ir.py  patch_plan_ir.py  patch_proposal_ir.py  patch_review_ir.py  plan_ir.py  profile_report.py  ranker_output_ir.py  ranking_ir.py  reflection_ir.py  report_bundle.py  result_ir.py  review_ir.py  run_result_ir.py  strict_base.py  synth_actions_ir.py  verification_ir.py
scripts/: continuous_patch_hunt.py  run_all_cases.sh  run_overnight.sh  test_agent.py
skills/: __init__.py  action_domain.py  agent_tools.py  build_local.py  code_structure.py  compiler_remark_parser.py  experience_memory.py  (+20 more)
(+130 files in other folders)
