[project]
name = "hpc-agent-platform"
version = "0.1.0"
description = "Local-only multi-agent HPC optimization platform MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "psutil>=5.9",
  "openai>=1.0",
  "matplotlib>=3.8",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["orchestrator", "skills", "schemas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
